--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -13,6 +13,7 @@ line_length:
     ignores_function_declarations: true
     ignores_comments: true
     ignores_urls: true
+    ignores_interpolated_strings: true
 function_body_length:
     warning: 300
     error: 500
@@ -29,4 +30,6 @@ file_length:
 cyclomatic_complexity:
     warning: 15
     error: 25
+variable_name:
+    allowed_symbols: "_"
 reporter: "xcode"
